chore: update cvc5 summit file and name

--- a/_posts/2024-09-11-cvc5_summit.md
+++ b/_posts/2024-09-11-cvc5_summit.md
@@ -18,4 +18,4 @@ API compared to [`lean-cvc5`], as well as the brand new (toy) tactic `falsifiabl
 [`cvc.lean`]: https://github.com/anzenlang/cvc.lean
 [`lean-cvc5`]: https://github.com/abdoo8080/lean-cvc5
 [`lean-auto`]: https://github.com/leanprover-community/lean-auto
-[slides]: /assets/pdf/cvc5Summit.pdf
+[slides]: /assets/pdf/2024_cvc5Summit.pdf
