chore: point to actual demo file

--- a/_posts/2025-02-14-cvc5_in_lean4.md
+++ b/_posts/2025-02-14-cvc5_in_lean4.md
@@ -13,7 +13,9 @@ The talk will be about 40 minutes and demo-heavy. We want to show [`cvc.lean`]'s
 the work we did on safety and ergonomics.
 
 A heavily documented, text version of the presentation can be found in the [`demo_2025_02`
-branch][demo branch] of the [`cvc.lean` repository][`cvc.lean`].
+branch][demo branch] of the [`cvc.lean` repository][`cvc.lean`]:
+
+- <https://github.com/anzenlang/cvc.lean/blob/demo_2025_02/CvcTest/Demo/February2025.lean>
 
 [Slides (PDF).][slides]
 
