--- a/_posts/2025-02-14-cvc5_in_lean4.md
+++ b/_posts/2025-02-14-cvc5_in_lean4.md
@@ -21,4 +21,4 @@ branch][demo branch] of the [`cvc.lean` repository][`cvc.lean`]:
 
 [`cvc.lean`]: https://github.com/anzenlang/cvc.lean
 [demo branch]: https://github.com/anzenlang/cvc.lean/tree/demo_2025_02
-[slides]: /assets/pdf/2025_02_smt.pdf
+[slides]: /assets/pdf/2025_02_cvc_lean.pdf
