chore: update 2025/02 demo blogpost

--- a/_posts/2025-02-14-cvc5_in_lean4.md
+++ b/_posts/2025-02-14-cvc5_in_lean4.md
@@ -12,13 +12,13 @@ Adrien is (remotely) presenting recent work on [`cvc.lean`] at ~~REDACTED~~ 🐙
 The talk will be about 40 minutes and demo-heavy. We want to show [`cvc.lean`]'s API-s, as well as
 the work we did on safety and ergonomics.
 
-A heavily documented, text version of the presentation can be found in the [`demo_2025_02`
+A heavily documented, text version of the presentation can be found in the [`2025_02_demo`
 branch][demo branch] of the [`cvc.lean` repository][`cvc.lean`]:
 
-- <https://github.com/anzenlang/cvc.lean/blob/demo_2025_02/CvcTest/Demo/February2025.lean>
+- <https://github.com/anzenlang/cvc.lean/blob/2025_02_demo/CvcTest/Demo/2025February.lean>
 
 [Slides (PDF).][slides]
 
 [`cvc.lean`]: https://github.com/anzenlang/cvc.lean
-[demo branch]: https://github.com/anzenlang/cvc.lean/tree/demo_2025_02
+[demo branch]: https://github.com/anzenlang/cvc.lean/tree/2025_02_demo
 [slides]: /assets/pdf/2025_02_cvc_lean.pdf
