chore: update latest article

--- a/_posts/2025-02-14-cvc5_in_lean4.md
+++ b/_posts/2025-02-14-cvc5_in_lean4.md
@@ -1,13 +1,13 @@
 ---
 layout: post
-title: cvc.lean presentation 2025/02/11 at ???
+title: cvc.lean talk 2025/02/11 at AWS
 date: 2025-02-11 10:00:00
 description: safe SMT-based constraint solving with `cvc.lean`
 tags: cvc5 smt lean
 categories: talks
 ---
 
-Adrien is (remotely) presenting recent work on [`cvc.lean`] at ~~REDACTED~~ 🐙
+Adrien is (remotely) presenting recent work on [`cvc.lean`] at Amazon Web Services 🐙
 
 The talk will be about 40 minutes and demo-heavy. We want to show [`cvc.lean`]'s API-s, as well as
 the work we did on safety and ergonomics.
